--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["storyfeet <thebeaky@psmail.net>"]
 edition = "2018"
 
 [dependencies]
-lazyf = { path = "../../mlibs/lazyf"}
+lazy_conf = { path = "../../mlibs/lazy_conf"}
 mksvg = { path = "../../mlibs/mksvg"}
